# 3L4AVp

./: .gitmodules  README.md
bayes_people_tracker/include/people_tracker/: flobot_tracking.h
cloud_annotation_tool/: viewer.cpp
deep-radar/: .gitignore  CMakeLists.txt  combineDatasets.py  getTrainingData.py  inference.py  install.txt  list_gpus.py  package.xml  requirements-gpu.txt  requirements.txt  train.py
deep-radar/launch/: deep.launch  offline-collect-data.launch  offline-inference.launch  offline-training.launch  online-training.launch
deep-radar/nn-utils/: indoor3d_util.py  provider.py
deep-radar/src/: README.md  clustering-db.py  clustering.py  clusteringPassthroughExperiment.py  confusion.py  datasetAugmenter.py  graph.py  grapher.py  offlineCollectData.py  offlineInference.py  offlineTrain.py  online.py  onlineTrain.py  onlineTraining.py  pn_model.py  test.py  train.py  trainOnline.py  trainOnline2.py
deep-radar/src/nn-utils/: model.py
direction/: direction.py
distance/: .gitignore  correlation.py  make.sh  plot.gnu
distance-error/: .gitignore  bar.py  hist.py
evaluation/: .gitignore  Makefile  all.gnu  clustering.py  cumulative.py  fog.lin  haze.gnu  haze.txt  new.gnu  normal.gnu  normal.txt  plot.py  process.sh  readme.txt  sensor_fusion.cpp
evaluation/exp1/: .depend  compute.cpp  example.txt  exp_1.gnu  fog2.lin  plot.gnu  postprocess.sh  preprocess.sh
evaluation/exp2/: Makefile  compute.cpp  fog2.lin  plot.gnu  postprocess.sh  table.txt
evaluation/exp3/: .gitignore  cleanup.sh  compute.cpp  first.gnu  first.txt  postprocess.sh  preprocess.sh  second.gnu  second.txt
evaluation/experiment_1_smoke/: .depend  normal.gnu
evaluation/experiment_2_moving_vehicle/: Makefile  moving_error.cpp  moving_vehicle.gnu
evaluation/experiment_3_multipeople/: Makefile  multipeople_error.cpp  process.sh
evaluation/experiment_3_multipeople/second_person_data/: sensor_fusion-8-stdout.log.filtered
evaluation/moving_vehicle/: .depend  moving_vehicle.fig  moving_vehicle.gnu  process.sh
evaluation/multipeople_correction/multi-two/: .sensor_fusion-8-stdout.log.swp  sensor_fusion-8-stdout.log.filtered
evaluation/multipeople_final/: multi_one.fig  multi_one.gnu  multi_one.txt  multi_two.fig  multi_two.gnu  multi_two.txt  process.sh  sensor_fusion-8-stdout.log.filtered
evaluation/precrec/: Makefile  dbscan.h  main.cpp  maina.cpp  pn_pr.cpp  precision_recall.gnu  precision_recall.sh  process.sh  simple.cpp
evaluation/precrec/data_exp_1/: gt.txt1010  gt.txt1020  gt.txt1050  gt.txt1070  gt.txt1090  gt.txt1100  gt.txt1120  gt.txt1150  gt.txt1160  gt.txt1170  gt.txt1200  gt.txt1230  gt.txt1260  gt.txt1300  gt.txt1310  gt.txt1340  gt.txt1360  gt.txt1370  gt.txt1380  gt.txt1390  gt.txt1410  gt.txt1420  gt.txt1430  gt.txt1460  gt.txt1500  gt.txt1540  gt.txt1560  gt.txt1570  gt.txt950  (+362 more)
evaluation_legacy/: cumulative.py
evaluation_legacy/experiment_1_smoke/: Makefile  all.gnu  fog.lin  offline_sensor_fusion.cpp  process.sh
evaluation_legacy/experiment_2_moving_vehicle/: process.sh  sensor_fusion-10-stdout.log.filtered
evaluation_legacy/experiment_3_multipeople/: multipersonone.gnu
evaluation_ros/: CMakeLists.txt  package.xml
evaluation_ros/src/: sensor_fusion.cpp
ground_truth_exp_3/: .gitignore  CMakeLists.txt  package.xml
ground_truth_exp_3/launch/: ground_truth_exp_3.launch
ground_truth_exp_3/src/: .ground_truth_exp_3.py.swp  ground_truth_exp_3.py
multi/: 3d.txt  getImages.py  getPixels.py  gt.py
precision-recall/: graph.py  sensor_fusion-8-stdout.log.filtered
ptt/: ptt.py  test1.py
radar/: CMakeLists.txt  CMakeLists.txt~  aha.txt  package.xml  run.txt
radar/cfg/: radar.cfg
radar/launch/: dopler.launch  laser_labelling.launch  laser_labelling.rviz  leg_test.launch  miltiple.launch  pt.launch  radar-exp1.launch  radar-exp2.launch  radar-exp3.launch  radar.launch  radar.launch~  radar_all.rviz  radar_det_obj_color_by_elev.rviz  t
radar/msg/: ppl.msg  radar_fusion.msg
radar/src/: dopler_correction.cpp  evaluator.cpp  ground_truth.cpp  laser_labelling.cpp  legFilter.cpp  prec-rec.py  radar_align.cpp  radar_detector_ol.cpp  radar_detector_ol.cpp~  radarology.cpp  svm.cpp
radar/src/ptt/: ptt.py  remuxer.py  test1.py
ti_mmwave_rospkg/cfg/: 1443_3d.cfg
ti_mmwave_rospkg/launch/: gather.launch  radar_det_obj_color_by_elev.rviz  rviz_1443_3d.launch
ti_mmwave_rospkg/src/: DataHandlerClass.cpp
velodyne_lifelong/: README.md  velodyne_detector.yaml  velodyne_lifelong.launch  velodyne_lifelong.rviz
velodyne_lifelong/bayes_people_tracker/: cnn1.yaml  cnn2.yaml  svm1.yaml  svm2.yaml  velodyne_detector.yaml
velodyne_lifelong/person_sppliter/: CMakeLists.txt  package.xml
velodyne_lifelong/person_sppliter/src/: ppl_spliter.cpp
(+1543 files in other folders)
